<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".login.ui.activities.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUser"
        style="@style/text_input_style"
        android:layout_height="@dimen/text_input_layout_height"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietUser"
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/text_input_edit_text_height"
            android:hint="@string/text_field_user_hint"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/text_input_style"
        android:layout_height="@dimen/text_input_layout_height"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUser">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/text_input_edit_text_height"
            android:hint="@string/text_field_password_hint"
            android:inputType="textPassword"
            android:textColorLink="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            style="@style/progress_style" />

    <TextView
        android:id="@+id/sign_up_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_field_make_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="202dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:text="@string/label_button_login"
        android:textColor="@android:color/white"
        android:background="@color/colorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_alert" />

</android.support.constraint.ConstraintLayout>