<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cadastro"
    tools:context=".registration.ui.activities.SignUpActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNameSignUp"
        style="@style/text_input_style"
        android:layout_height="@dimen/text_input_layout_height"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietNameSignUp"
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/text_input_edit_text_height"
            android:hint="@string/text_field_name_hint"
            android:inputType="text"
            android:textColorLink="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUserSignUp"
        style="@style/text_input_style"
        android:layout_height="@dimen/text_input_layout_height"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNameSignUp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietUserSignUp"
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/text_input_edit_text_height"
            android:hint="@string/text_field_user_hint"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/colorAccent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPasswordSignUp"
        style="@style/text_input_style"
        android:layout_height="@dimen/text_input_layout_height"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUserSignUp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietPasswordSignUp"
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/text_input_edit_text_height"
            android:hint="@string/text_field_password_hint"
            android:inputType="textPassword"
            android:textColorLink="@color/colorAccent" />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPasswordSignUp"
        style="@style/progress_style" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="202dp"
        android:layout_height="62dp"
        android:layout_marginTop="50dp"
        android:text="@string/label_button_register"
        android:textColor="@android:color/white"
        android:background="@color/colorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPasswordSignUp" />



</android.support.constraint.ConstraintLayout>