<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".cars.ui.fragments.RegisterCarFragment">

    <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cadastro">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilModel"
                style="@style/text_input_style"
                android:layout_height="@dimen/text_input_layout_height"
                android:layout_marginTop="170dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietModel"
                    android:layout_width="@dimen/text_input_width"
                    android:layout_height="@dimen/text_input_edit_text_height"
                    android:hint="@string/text_field_model_hint"
                    android:inputType="text"
                    android:textColorLink="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPlate"
                style="@style/text_input_style"
                android:layout_height="@dimen/text_input_layout_height"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilModel">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietPlate"
                    android:layout_width="@dimen/text_input_width"
                    android:layout_height="@dimen/text_input_edit_text_height"
                    android:hint="@string/text_field_plate_hint"
                    android:inputType="textEmailAddress"
                    android:textColorLink="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>


        <ProgressBar
                android:id="@+id/progress"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/btnRegisterCars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPlate"
                style="@style/progress_style" />

        <Button
                android:id="@+id/btnRegisterCars"
                android:layout_width="202dp"
                android:layout_height="62dp"
                android:layout_marginTop="50dp"
                android:text="@string/label_button_register"
                android:textColor="@android:color/white"
                android:background="@color/colorButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPlate" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
